# cppLearn

bsdiff/: CMakeLists.txt  main.cpp
bsdiff/include/HelloWorld/: HelloWorld.hpp
bsdiff/include/bsdiff/: bsdiff.h  bsdiff_jni.hpp  bspatch.h
bsdiff/src/HelloWorld/: HelloWorld.cpp
bsdiff/src/bsdiff/: bsdiff.c  bsdiff_jni.cpp
coroutine_learn01/: CMakeLists.txt  main.cpp
coroutine_learn01/include/learn01/: learn001.hpp  learn01.hpp
coroutine_learn01/include/pcm/: RecordPcm.hpp
coroutine_learn01/src/learn01/: learn001.cpp  learn01.cpp  message.cpp
coroutine_learn01/src/pcm/: RecordPcm.cpp
coroutine_learn02/: CMakeLists.txt  main.cpp
coroutine_learn02/include/learn01/: learn001.hpp
coroutine_learn02/src/learn01/: learn001.cpp
epoll_learn01/: CMakeLists.txt  main.cpp
epoll_learn01/include/learn01/: learn001.hpp
epoll_learn01/src/learn01/: learn001.cpp
ffmpeg_learn01/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
ffmpeg_learn01/include/learn/: ffmpegLearn01.hpp
ffmpeg_learn01/libs/ffmpeg/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg_learn01/src/learn/: ffmpegLearn01.cpp
ffmpeg_learn02/: CMakeLists copy.txt  CMakeLists.txt  main.cpp
ffmpeg_learn02/include/learn01/: learn01.hpp  learnc01.h
ffmpeg_learn02/include/learn02/: learn021.hpp
ffmpeg_learn02/src/learn01/: learn01.cpp  learnc01.c
ffmpeg_learn02/src/learn02/: learn021.cpp
hello_ffm/: CMakeLists.txt  HelloWorld.java  main.cpp
hello_jni/: .gitignore  CMakeLists.txt  HelloWorld.h  HelloWorld.java
hello_jni/include/HelloWorld/: HelloWorld.hpp
hello_jni/include/brotli/: BrotliencoderJni.hpp
hello_jni/src/: HelloWorlc.cpp  HelloWorld.cpp
hello_jni/src/brotli/: BrotliencoderJni.cpp
learn01/: CMakeLists.txt  main.cpp
learn01/include/learn01/: learn01.hpp
learn01/include/learn02/: learn02.hpp  learn021.hpp
learn01/src/learn01/: learn01.cpp
learn01/src/learn02/: learn02.cpp  learn021.cpp
learn01/src/source/: add.cpp
learn02/: CMakeLists.txt  CMakePresets.json  main.cpp
learn02/include/: Person.hpp
learn02/include/learn01/: learn001.hpp
learn02/src/: Person.cpp
learn02/src/learn01/: learn001.cpp
mysql_learn01/: CMakeLists.txt  main.cpp
mysql_learn01/include/learn01/: learn001.hpp
mysql_learn01/src/learn01/: learn001.cpp
object_model_01/: CLAUDE.md  CMakeLists.txt  main.cpp  skills-lock.json
object_model_01/.claude/agents/: cpp-test-writer.md
object_model_01/include/learn01/: learn001.hpp  startup_demo.hpp
object_model_01/include/learn02/: sha256sum.hpp
object_model_01/src/learn01/: learn001.cpp  startup_demo.cpp
object_model_01/src/learn02/: sha256sum.cpp
object_model_01/tests/: test_sha256sum.cpp
opencv_learn01/: CMakeLists.txt  main.cpp
opencv_learn01/include/learn01/: learn01.hpp
opencv_learn01/src/learn01/: learn01.cpp
opengl2_learn01/: CMakeLists.txt  main.cpp
opengl2_learn01/include/learn01/: learn01.hpp
opengl2_learn01/src/learn01/: learn01.cpp
opengl_learn01/: .gitignore  CMakeLists.txt  main.cpp
opengl_learn01/include/glad/: glad.h
opengl_learn01/include/learn01/: learn01.hpp
opengl_learn01/opengl/shader/: image.frag
opengl_learn01/src/learn01/: learn01.cpp
opengl_learn02/: CMakeLists.txt  main.cpp
opengl_learn02/include/learn01/: learn01.hpp
opengl_learn02/src/glad/: glad.c
opengl_learn02/src/learn01/: learn01.cpp
opengl_learn03/: .gitignore  CMakeLists.txt  main.cpp
opengl_learn03/include/glad/: glad.h
opengl_learn03/include/learn01/: learn001.hpp
opengl_learn03/include/learn02/: learn011.hpp
opengl_learn03/src/glad/: glad.c
opengl_learn03/src/learn01/: learn001.cpp
opengl_learn03/src/learn02/: learn011.cpp
opengl_learn04/: CMakeLists.txt  main.cpp
opengl_learn04/include/glad/: glad.h
opengl_learn04/include/learn01/: learn01.hpp
opengl_learn04/src/glad/: glad.c
opengl_learn04/src/learn01/: learn01.cpp
qt_learn01/: CMakeLists.txt  main.cpp  main1.cpp
qt_learn01/include/learn01/: learn001.hpp
qt_learn01/src/learn01/: learn001.cpp
vulkan_learn01/: .gitignore  CMakeLists.txt  main.cpp
web_request01/: CMakeLists.txt  main.cpp
web_request01/include/learn02/: learn02.hpp
web_request01/src/learn02/: learn02.cpp
xml_learn01/: CMakeLists.txt  hello.xml  main.cpp
xml_learn01/include/learn01/: learn001.hpp
xml_learn01/src/learn01/: learn001.cpp
